--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css"></link>
     <meta charset="utf-8" />
     <title>Example App</title>
 </head>
