added not in game message

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,3 @@
-<h1>Shameel Status</h1>
+<h1>Shameel Status: {{#if data.shameel.test}} Round {{data.shameel.test}} {{else}} Not in game {{/if}}</h1>
 <h1>Nomar Status</h1>
 <h1>Omas Status</h1>
-{{data.shameel.round}}
-{{data.shameel.test}}
