--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,3 +1,3 @@
-<h1>Shameel Status:  {{#if data.shameel.percentComplete}}{{data.shameel.percentComplete}}% complete {{else}} Not in game {{/if}} </h1>
+<h1>Shameel Status:  {{#if data.shameel.percentComplete}}{{data.shameel.percentComplete}}% complete {{else}} Not in game {{/if}} </h1> <button>Request</button>
 <h1>Nomar Status</h1>
 <h1>Omas Status</h1>
