--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,8 +1,18 @@
 <!doctype html>
 <html>
 <head>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css"></link>
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<link rel="stylesheet" href="/main.css"></link>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+<script src="main.js"></script>
+
     <meta charset="utf-8" />
+ <meta http-equiv="refresh" content="25; URL=http://192.168.2.168:3000">
+
     <title>Example App</title>
 </head>
 <body>
