prepping for socketio

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,16 +6,18 @@
 
 <link rel="stylesheet" href="/main.css"></link>
 
+<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 
 <script src="main.js"></script>
 
-    <meta charset="utf-8" />
- <meta http-equiv="refresh" content="25; URL=http://192.168.2.168:3000">
-
     <title>Example App</title>
 </head>
-<body>
+<body ng-app="myapp">
    {{{body}}}
 </body>
 </html>
