--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,7 @@
-<h1 class="shameel">Shameel Status:  {{#if data.shameel.percentComplete}}{{data.shameel.percentComplete}}% complete {{else}} Not in game {{/if}} <button type="submit" class="btn btn-primary button-shameel">Request</button></h1> 
+<div ng-controller="mainController">
+
+<h1 class="shameel">Shameel Status:  {{#if data.shameel.percentComplete}}{{data.shameel.percentComplete}}% complete {{else}} Not in game {{/if}} <button type="submit" class="btn button-shameel" ng-class="{'btn-primary': shameelRequest, 'btn-success': !shameelRequest}" ng-disabled="!shameelRequest" ng-click="request('shameel')">{[{buttonText}]}</button></h1> 
+
+
+
+</div>
