socketio working, need acknowledgement

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,8 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 
+<script src="socket.min.js"></script>
+
 <script src="main.js"></script>
 
     <title>Example App</title>
