--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,11 @@
 <div ng-controller="mainController">
 
-<h1 class="shameel">Shameel Status:  {{#if data.shameel.percentComplete}}{{data.shameel.percentComplete}}% complete {{else}} Not in game {{/if}} <button type="submit" class="btn button-shameel" ng-class="{'btn-primary': shameelRequest, 'btn-success': !shameelRequest}" ng-disabled="!shameelRequest" ng-click="request('shameel')">{[{buttonText}]}</button></h1> 
+<h1 class="shameel">
+	Shameel Status:  
+	<span ng-show="roundPercentage >= 0">{[{roundPercentage}]}% complete</span> 
+	<span ng-hide="roundPercentage >= 0 || done == 1">Not in game</span> 
+	<button type="submit" class="btn button-shameel" ng-class="{'btn-primary': shameelRequest, 'btn-success': !shameelRequest}" ng-disabled="!shameelRequest" ng-click="request('shameel')">{[{buttonText}]}</button>
+</h1> 
 
 
 
