--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
 
 <script src="main.js"></script>
 
-    <title>Example App</title>
+    <title>Requesting</title>
 </head>
 <body ng-app="myapp">
    {{{body}}}
