--- a/public/main.css
+++ b/public/main.css
@@ -7,3 +7,9 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.allButton {
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+}
