added chrome notification and sound

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,11 +11,16 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+<script src="angular.min.js"></script>
 
 <script src="socket.min.js"></script>
 
 <script src="main.js"></script>
+
+<script src="https://rawgit.com/sagiegurari/HTML5-Desktop-Notifications/master/desktop-notify.js"></script>
+
+
+<script src="angular-web-notification.js"></script>
 
     <title>Requesting</title>
 </head>
