changed html title

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
 
 <script src="angular-web-notification.js"></script>
 
-    <title>Requesting</title>
+    <title>Meeohs GSI</title>
 </head>
 <body ng-app="myapp">
    {{{body}}}
